--- a/less/desktope_1512px/bg-image.less
+++ b/less/desktope_1512px/bg-image.less
@@ -4,7 +4,7 @@
     left: 0px;
     width: 1000px;
     height: 660px;
-    background-image: url("/img_min/bg.png");
+    background-image: url("../../img_min/bg.png");
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 1;
